...
      return;
    }
    setPage(page + 1);
    fetchDailyRations();
  };
  return (
    <View style={styles.container} testID="dailyRationScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={dailyRationList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
