...
      return;
    }
    setPage(page + 1);
    fetchProducts();
  };
  return (
    <View style={styles.container} testID="productScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={productList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
